fix: More menu alignment fixex

--- a/packages/vue/src/styles/_components.scss
+++ b/packages/vue/src/styles/_components.scss
@@ -137,6 +137,9 @@
     height: 3.8rem;
     padding-top: 0.8rem;
     padding-bottom: 0.8rem;
+    .sp-link-icon {
+      margin:0 0.5rem;
+    }
     .sp-wallet-menu-action__icon {
       opacity: 0.5;
       width: 1.6rem;
