--- a/packages/vue/src/styles/_utility.scss
+++ b/packages/vue/src/styles/_utility.scss
@@ -29,7 +29,7 @@
   width: 2rem;
   background: #111111;
   opacity: 0.1;
-  margin-bottom: 2.3rem;
+  margin-bottom: 0.3rem;
 }
 
 .sp-dummy-fill {
